Finish notes on Fourier analysis

--- a/content/notes/UWAA556/ch01-1.md
+++ b/content/notes/UWAA556/ch01-1.md
@@ -290,4 +290,115 @@ Fourier transforms are appropriate to analyze a linear, homogeneous medium, e.g.
 
 Also known as a one-sided Fourier transform, or a generalized Fourier transform.
 
-Consists of a transform over just half of the infinite interval: \\( [0, \infty] \\). This makes it appropriate for time problems / initial value problems ()
+Consists of a transform over just half of the infinite interval: \\( [0, \infty] \\). This makes it appropriate for time problems / initial value problems where we need to treat the time variable.
+
+The time spectrum of \\( f(t) \\) is
+{{< katex display >}}
+\hat {f}(\omega) = \int _0 ^\infty f(t) e^{i \omega t} \dd t
+{{< /katex >}}
+
+with inverse transform
+{{< katex display >}}
+f(t) = \frac{1}{2 \pi} \int _{-\infty + i s} ^{\infty + i s} f(\omega) e ^{- i \omega t} \dd \omega
+{{< /katex >}}
+
+The inverse Laplace integral is an integral over the complex plane. The factor \\( i s \\) is there in order for the transform pair to be convergent. Contour \\( i s \\) has to be above all of the poles of \\( f(\omega) \\).
+
+## Important Fourier Transforms
+
+Representative of the most important features of the Fourier Transform:
+
+- Gaussian: 
+{{< katex display >}}
+f(x) = e^{- \alpha x ^2} \qquad \hat {f} (k) = \frac{1}{\sqrt{2 \alpha}} e ^{- k ^2 / 4 \alpha}
+{{< /katex >}}
+
+Note that if \\( \alpha = 1/2 \\), it is its own transform pair. The Gaussian is one of the only eigenfunctions of the Fourier transform.
+
+- Derivative
+{{< katex display >}}
+\dv{^n f}{x^n} \quad \leftrightarrow \quad (i k) ^n \hat{f}(k)
+{{< /katex >}}
+
+In this way, linear differential equations become simple algebraic equations in their Fourier transformed form.
+
+- Wave
+{{< katex display >}}
+f(x) = e^{i k_0 x} \qquad \hat{f}(k) = \sqrt{2 \pi} \delta (k - k_0)
+{{< /katex >}}
+
+### Unitary Fourier Transform
+
+The factor of \\( 1/ 2\pi \\) in front of either the Fourier transform or its inverse can be moved to either side by convention. The "unitary" Fourier transform convention splits it evenly across both:
+
+{{< katex display >}}
+f(x) = \frac{1}{\sqrt{2 \pi}} \int _{- \infty} ^{\infty} \hat{f} (k) e^{i k x} \dd x
+{{< /katex >}}
+{{< katex display >}}
+\hat{f}(k) = \frac{1}{\sqrt{ 2 \pi}} \int _{- \infty} ^{\infty} f(x) e^{- i k x} \dd x
+{{< /katex >}}
+
+We'll use this notation going forward.
+
+### Multi-dimensional Fourier Transforms
+
+Extending to more dimensions, we can do multi-dimensional Fourier transforms by transforming each coordinate successively.
+
+{{< katex display >}}
+f(x, y) \rightarrow \hat{f}(k, l) = \frac{1}{2 \pi} \int _{- \infty} ^{\infty} \dd x \int _{- \infty} ^{\infty} \dd y \, e^{- i (k x + ly)} f(x, y)
+{{< /katex >}}
+
+Let vectors \\( \vec k = (k, l) \\), \\( \vec x = (x, y) \\), then the phase factor \\( k x + l y = \vec k \cdot \vec x \\).
+
+An N-dimensional transform is just
+
+{{< katex display >}}
+\hat{f}(\vec k) = \frac{1}{(2 \pi)^{d/2}} \int _{- \infty} ^{\infty} \dd ^d x \, e^{-i \vec k \cdot \vec x} f(\vec x)
+{{< /katex >}}
+
+If you do it in cylindrical coordinates, you end up with a Bessel function as your transform.
+
+### Space-time Fourier Transform
+
+The space-time Fourier Transform is also useful, where we combine both the time and space transforms to deal with differential equations that are functions of both space and time. We pretend time extends in both directions for this; otherwise we would have the initial conditions we'd use for a Laplace transform and we would have an easier situation on our hands.
+
+{{< katex display >}}
+f(\vec x, t) \rightarrow \hat{f}(\vec k) = \frac{1}{4 \pi ^2} \int _{- \infty} ^{\infty}  \dd ^3 x \, e^{- i \vec k \cdot \vec x} \int _{- \infty} ^{\infty} \dd t \, e^{ i \omega t} f(\vec x, t)
+{{< /katex >}}
+
+Note the flipped "signature" of the time transform, where the phase of the complex exponential has an opposite sign. Time has an opposite "direction" to space, and this convention ends up being the most meaningful.
+
+The inverse transform just integrates the other way around with the signs flipped.
+
+{{< katex display >}}
+f(\vec x, t) = \int _{- \infty} ^{\infty} \dd ^3 k \int _{- \infty} ^{\infty} \dd \omega \hat f (\vec k, \omega) e^{i (\vec k \cdot \vec x - \omega t)}
+{{< /katex >}}
+
+Looking at the two components of the transform, \\( \hat f (\vec k, \omega) \\) in a sense represents the equivalent of the Fourier coefficients / amplitudes. \\( e^{i (\vec k \cdot \vec x - \omega t)} \\) is a waveform with wave vector \\( \vec k \\) and frequency \\( \omega \\)
+
+Important properties of the space-time Fourier transform are:
+
+- The spatial part satisfies:
+  - \\( \dv {^n f}{x^n} \rightarrow (i k) ^n \hat f \\)
+  - \\( \grad f \rightarrow i \vec k \hat f \\)
+  - \\( \div f \rightarrow i \vec k \cdot \hat f \\)
+  - \\( \curl f \rightarrow i \vec k \cross \hat f \\)
+  - \\( \grad ^2 f \rightarrow (i k)^2 \hat f \rightarrow - k^2 \hat f \\)
+
+So there is a symbolic correspondence between \\( \grad \\) and \\( i \vec k \\)
+
+- The time part satisfies
+  - \\( \pdv {^n f}{t^n} \rightarrow (- i \omega)^n \hat f\\)
+
+So:
+{{< katex display >}}
+(\vec x, t) \leftrightarrow (\vec k, \omega)
+{{< /katex >}}
+{{< katex display >}}
+\grad \leftrightarrow i \vec k
+{{< /katex >}}
+{{< katex display >}}
+\pdv{}{t} \leftrightarrow -i \omega
+{{< /katex >}}
+
+PDE's in space and time become algebraic equations that can be much more easily solved in the Fourier domain.
