Summarize first chapter of aa556

--- a/content/notes/UWAA556/ch01-1.md
+++ b/content/notes/UWAA556/ch01-1.md
@@ -402,3 +402,116 @@ So:
 {{< /katex >}}
 
 PDE's in space and time become algebraic equations that can be much more easily solved in the Fourier domain.
+
+
+## Summary
+
+To summarize, we solve linear differential equations on the finite interval of the form
+
+{{< katex display >}}
+u_t = A u \rightarrow u(x, t) = X(x)T(t)
+{{< /katex >}}
+by a separation of variables, and the choice of a basis set of eigenfunctions for the spatial solution. 
+{{< katex display >}}
+\rightarrow AX = \lambda X \rightarrow (\lambda _n, x_n)
+{{< /katex >}}
+{{< katex display >}}
+T' = \lambda T \rightarrow T_n = e^{\lambda _n t}
+{{< /katex >}}
+{{< katex display >}}
+u(x, t) = \sum_{n = -\infty} ^{\infty} C_n X_n(x) T_n (t)
+{{< /katex >}}
+{{< katex display >}}
+u_0 \equiv u(x, 0) = \sum_{n = -\infty} ^{\infty} C_n X_n (x)
+{{< /katex >}}
+{{< katex display >}}
+\langle u_0 | X_m \rangle = \sum_n C_n \langle X_n | X_m \rangle
+{{< /katex >}}
+{{< katex display >}}
+\langle X_n | X_n \rangle = 1 \quad \text{(normalized eigenfunctions)}
+{{< /katex >}}
+{{< katex display >}}
+C_n = \frac{\langle u_0 | X_m \rangle}{\langle X_n | X_n \rangle}
+{{< /katex >}}
+
+So the coefficients are projections of the initial condition onto the basis.
+
+- The eigenfunctions evolve independently
+- The evolution of the full solution is the sum of the evolutions of each of the modes
+- The spectral coefficients are the projection of the initial conditions onto the basis.
+
+Fourier modes arise naturally. Take for example the advection equation
+
+{{< katex display >}}
+\pdv{u}{t} + c \pdv {u}{x} = 0 \qquad x \in [0, L]
+{{< /katex >}}
+{{< katex display >}}
+u_0 \equiv u(x, t = 0) \quad \text{(given initial condition)}
+{{< /katex >}}
+{{< katex display >}}
+u(x+ L, t) = u(x, t) \quad \text{(periodic boundary conditions)}
+{{< /katex >}}
+Look for separable solutions \\( u = X(x) T(t) \\)
+{{< katex display >}}
+X T' + c X' T = 0
+{{< /katex >}}
+{{< katex display >}}
+\frac{X'}{X} = -\frac{1}{c} \frac{T'}{T} = \lambda
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow X' = \lambda X \qquad \rightarrow X = A e^{\lambda x}
+{{< /katex >}}
+Applying periodic boundary condition,
+{{< katex display >}}
+X(x + L) = X(x) \rightarrow A e^{\lambda x} e^{\lambda L} = A e^{\lambda x}
+{{< /katex >}}
+{{< katex display >}}
+e^{\lambda L = 1} \rightarrow \lambda_n = \frac{2 \pi}{L} i n, \quad n = ... -3, -2, -1, 0, 1, 2, 3, ...
+{{< /katex >}}
+{{< katex display >}}
+k_n \equiv \frac{2 \pi}{L} n
+{{< /katex >}}
+{{< katex display >}}
+X(x) = e^{i k_n x}
+{{< /katex >}}
+The spatial eigenfunctions fall out as the Fourier basis.
+{{< katex display >}}
+T_n ' = - c T_n \lambda _n \rightarrow T_n = - i c k_n T_n
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow T_n = B e^{- i c k_n t}
+{{< /katex >}}
+{{< katex display >}}
+u(x, t) = \sum_{n = - \infty} ^{\infty} c_n e^{i k_n (x - ct}
+{{< /katex >}}
+The initial condition can just be written as a Fourier series, since the time component at \\( t= 0 \\) is just \\( 1 \\)
+{{< katex display >}}
+u_0 = \sum_{n = - \infty} ^{\infty} c_n e ^{i k _n x}
+{{< /katex >}}
+{{< katex display >}}
+\langle u_0 | e^{i k _m x} \rangle = \sum_n c_n \langle e ^{i k _n x } | e^{i k_n x} \rangle
+{{< /katex >}}
+{{< katex display >}}
+\langle e^{i k_n x} | e^{i k _m x} \rangle = \int _0 ^L e^{i k _n x} e^{i k_m x} \dd x
+{{< /katex >}}
+{{< katex display >}}
+= \int _0 ^L e^{i x(2 \pi / L)(n + m)} \dd x
+{{< /katex >}}
+{{< katex display >}}
+= \frac{1}{(2 \pi / L) i (n + m)} \left. e^{i (2 \pi / L) x (n + m)} \right|_0 ^L
+{{< /katex >}}
+The argument is 0 unless \\( n = -m \\), so
+{{< katex display >}}
+= L \delta _{n - m}
+{{< /katex >}}
+{{< katex display >}}
+c_n = \frac{1}{L} \int _0 ^L u_0 (x) e^{- i k_n x} \dd x
+{{< /katex >}}
+which is exactly the Fourier integral of the initial condition.
+
+{{< katex display >}}
+\pdv{u}{t} + c \pdv{u}{x} = 0
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow u (x, t) = \sum_{n = - \infty} ^{\infty} c_n e^{i (k_n x - k_n c t)}
+{{< /katex >}}
