Notes on diffusion and phase space

--- a/content/notes/UWAA556/ch01-1.md
+++ b/content/notes/UWAA556/ch01-1.md
@@ -515,3 +515,461 @@ which is exactly the Fourier integral of the initial condition.
 {{< katex display >}}
 \rightarrow u (x, t) = \sum_{n = - \infty} ^{\infty} c_n e^{i (k_n x - k_n c t)}
 {{< /katex >}}
+
+Recall the symbolic correspondence \\( (\vec x, t) \leftrightarrow (\vec k, \omega) \\), \\( i \vec k \leftrightarrow \grad \\), and \\( - i \omega \leftrightarrow \pdv{}{t} \\). Applying these to the advection equation,
+
+{{< katex display >}}
+\partial _t u + c \partial _x u = 0 \leftrightarrow - i \omega \hat u + i k c \hat u = 0
+{{< /katex >}}
+{{< katex display >}}
+\hat u (-i)(\omega - c k) = 0
+{{< /katex >}}
+We want non-trivial solutions, so \\( \hat u \neq 0 \\), so we obtain a relationship between the time frequency and the wavenumber called the dispersion relation
+{{< katex display >}}
+\omega = c k
+{{< /katex >}}
+
+The wavenumbers in \\( [0, L] \\) are \\( k_n = \frac{2 \pi}{L} n \\)
+{{< katex display >}}
+u(x, t) = \sum_{n = - \infty} ^{\infty} a_n e^{i (k_n x - \omega (k_n) t)}
+{{< /katex >}}
+which is our general solution for all linear problems on the interval. It depends only on the wavenumbers \\( k_n \\) and the interval \\( L \\). In this case we see it really only depends on what the dispersion relation was.
+
+In cases where the interval becomes very large, the solution consists of an integral over all wavenumbers
+{{< katex display >}}
+L \rightarrow \infty
+{{< /katex >}}
+{{< katex display >}}
+u(x, t) = \int _{-\infty} ^{\infty} A(k) e^{i k x - \omega(k) t} \dd k
+{{< /katex >}}
+where \\( A(k) \\) are the spectral coefficients of the initial condition (not the linear operator). This is the general solution to linear evolution equations.
+
+The **dispersion relation** \\( \omega = \omega(k) \\) is a functional relation between the time and space frequencies and is a consequence of the physical situation. You can think of it as a signature consequence of the PDE or system of equations in question.
+
+### Properties of the Dispersion Relation
+
+We can always write our PDE in the form \\( \psi (\grad, \pdv{}{t}) \cdot \vec u = 0 \\). This is symbolically equivalent to a dispersion function \\( D(\omega, k) \cdot \hat u = 0 \\). Because the PDE describes the motion of \\( u \\), the solutions of the dispersion function also describe the motion.
+
+- Phase velocity
+
+Consider a single phase component or a single wave
+{{< katex display >}}
+e^{i (\vec k \cdot \vec x - \omega t)}
+{{< /katex >}}
+In 1-D, factor out the \\( k \\): \\( k (x - \frac{\omega}{k} t) \\). Along the line \\( x = \frac{\omega}{k}t \\), the phase is constant. The apparent velocity of a single phase component is
+{{< katex display >}}
+v_\phi = \frac{\omega}{k}
+{{< /katex >}}
+
+- Group velocity
+
+This is a bit more complicated, and first we'll need the concept of the principle of stationary phase.
+
+{{< katex display >}}
+u(x, t) = \int _{-\infty} ^{\infty} A(k) e^{i (kx - \omega t)} \dd x
+{{< /katex >}}
+The arbitrary solution arises from coalescing waves in just the right phases. If we start with some sort of shape and want to know how it moves, we need to consider that it is composed of many waves that may have phases moving in totally different directions, but if a bunch of waves move in phase with each other then we'll see an apparent motion of the shape.
+
+First we look at the total phase function
+{{< katex display >}}
+\phi = k x - \omega t
+{{< /katex >}}
+and Taylor expand the phase function around a stationary wave mode \\( k_0 \\)
+{{< katex display >}}
+\phi = \phi(k_0) + \left. \pdv{\phi}{k} \right| _{k = 0} (k - k_0) + \frac{1}{2} \left. \pdv{^2 \phi}{k^2} \right| _{k = k_0} (k - k_0 )^2 + \ldots
+{{< /katex >}}
+{{< katex display >}}
+\phi _k = k - \pdv{\omega}{k} t
+{{< /katex >}}
+{{< katex display >}}
+\phi_{kk} = - \omega_{kk} \cdot t
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \phi = \phi(k_0) + \left( x - \left.\pdv{\omega}{k}\right|_{k_0} \cdot t \right)(k - k_0) - \frac{1}{2} \left.\omega_{kk}\right|_{k_0} (k - k_0) ^2 
+{{< /katex >}}
+
+The Riemann-Lebesgue Lemma is helpful here: Consider this integral
+{{< katex display >}}
+\int _{-\infty} ^{\infty} f(k) e^{-i k t} \dd x
+{{< /katex >}}
+and consider the limit as \\( t \rightarrow \infty \\). This is like asking what are the Fourier coefficients of the very highest modes? What is the behavior at the very largest wavenumbers? For the integral to converge, the highest wavenumber needs to go to zero. The Riemann-Lebesgue lemma says that the limit of the integral is zero even for functions like trigonometric curves. The idea is that Fourier modes of infinite wavenumber have zero energy, otherwise the integral that defines it won't converge.
+
+Consider the solution
+{{< katex display >}}
+u(x, t) = \int _{-\infty} ^{\infty} A(k) e^{i \phi(k)} \dd k
+{{< /katex >}}
+and look at the Taylor expansion
+{{< katex display >}}
+\phi(k) = \phi(k_0) + (x - \omega_k t) (k - k_0) - \frac{1}{2} \omega_{kk} t (k - k_0) ^2 + \ldots
+{{< /katex >}}
+Because of the Riemann-Lebesgue lemma, any terms that are first-order (linear) in \\( k \\) will vanish in the limit \\( t \rightarrow \infty \\). Everywhere with a non-zero linear term will go to zero. The physical intuition of the Riemann-Lebesgue lemma is that the function goes to zero at infinity as a result of destructive interference.
+
+Where does the linear term vanish? when
+{{< katex display >}}
+x - \left. \pdv{\omega}{k} \right|_{k_0} t = 0
+{{< /katex >}}
+This defines a set of coordinates \\( x = \pdv{\omega}{k} \cdot t \\). Along this trajectory, the asymptotic behavior of the integral does not vanish. Breaking the integral into three components, two limits and one region where the Taylor expansion is valid:
+{{< katex display >}}
+\lim _{t \rightarrow \infty} u = \lim_{t \rightarrow \infty} \int _{-\infty} ^{k_0 - \delta k} (I) + \int _{k_0 - \delta k} ^{k_0 + \delta k} (I) + \int_{k_0 + \delta k} ^{\infty}
+{{< /katex >}}
+
+The outside components will be zero, because there
+
+{{< katex display >}}
+x - \left. \pdv{\omega}{k} \right|_{k_0} t = 0
+{{< /katex >}}
+is not satisfied, but inside the window we obtain the asymptotic behavior of our waveform
+{{< katex display >}}
+\lim_{t \rightarrow \infty} u(x, t) = \int_{k_0 - \delta k} ^{k_0 + \delta k} A(k) e^{i \phi(k)} \dd k
+{{< /katex >}}
+
+Now, suppose the dispersion relation is only quadratic, so we only keep terms up to \\( \omega_{kk} \neq 0 \\), \\( \omega_{kkk} = 0 \\).
+{{< katex display >}}
+u(x, t) = A(k_0) e^{i \phi (k_0)} \int_{k_0 - \delta k} ^{k_0 + \delta k} e^{- i \frac{1}{2} \omega_{kk} (k - k_0 )^2 t} \dd x
+{{< /katex >}}
+If we actually carry out the integral,
+{{< katex display >}}
+\lim_{t \rightarrow \infty} u = A(k_0) \sqrt{\frac{\pi}{2 \omega_{kk} |_{k_0} t}} e^{i (k_0 x - \omega_0 t + \pi / 4)}
+{{< /katex >}}
+
+This is called the stationary phase solution for the asymptotic behavior of the solution. Looking at the solution, the wave "spreads out" due to the quadratic part of \\( \omega \\). The amplitude shrinks at the rate \\( 1/\sqrt{2 \omega_{kk} t} \\) \sim t^{-1/2}. That's why it's called dispersion. At the same time as the amplitude shrinks, the wave is moving on the trajectory that satisfies
+{{< katex display >}}
+x - \left. \pdv{\omega}{k} \right|_{k_0} t = 0 \rightarrow x = \left. \pdv{\omega}{k} \right|_{k = k_0} \cdot t
+{{< /katex >}}
+This velocity is called the **group velocity**, because it describes the motion of structures that are not composed of a single wave / phase component.
+{{< katex display >}}
+\left. \pdv{\omega}{k} \right|_{k = k_0} \quad \text{Group velocity}
+{{< /katex >}}
+
+For linear dispersion relations, the group velocity and the phase velocity are the same, but for more complicated functions they are not.
+
+- Growth/decay of modes and energy as a complex time frequency
+
+Because \\( \omega \\) comes from the roots of some arbitrary dispersion function \\( D(\omega, k) = 0 \\), we know that \\( \omega \\) will be complex valued. We can split the frequency into its real and imaginary parts
+{{< katex display >}}
+\omega(k) = \omega_r(k) + i \omega_i (k)
+{{< /katex >}}
+{{< katex display >}}
+e^{i (kx - \omega t)} = e^{\omega_i t} e^{i (kx - \omega_r t)}
+{{< /katex >}}
+The imaginary component gives a regular exponential function. The real component in the complex exponential describes bounded waves. So the amplitude is described by the imaginary part \\( \omega_i \\).
+
+If we're summing up over all those modes
+{{< katex display >}}
+\int A(k) e^{\omega_i t} e^{i (kx - \omega_r t)} \dd x
+{{< /katex >}}
+the amplitudes include the exponential \\( e^{\omega_i t} \\).
+
+- If \\( \omega_i > 0 \\), modes grow exponentially in time
+- If \\( \omega_i < 0 \\), modes shrink or damp with t
+
+## Diffusion
+
+### Probability Distributions
+
+> Check out Probability Theory (Jaynes) for a much more detailed reference.
+
+Some variables are random, in some sense. They may take on a set of values with different probability. If \\( X \\) is a random variable, the set of probabilities assigned to each possible outcome of \\( X \\) is called its probability distribution.
+
+- Discrete distributions: \\( X \\) can take on finitely/countably many values.
+
+Everyone loves the good old Binomial distribution: Suppose we conduct \\( n \\) independent experiments with a binary outcome of success or failure. Let the probability of success \\( P(S) = p \\), so the probability of failure \\( P(F) = 1 - p \\). How likely is it to have \\( k \\) successes in \\( n \\) trials?
+
+{{< katex display >}}
+P(S^k) = \begin{pmatrix} n \\ k \end{pmatrix} p^k (1 - p) ^{n-k}
+{{< /katex >}}
+where
+{{< katex display >}}
+\begin{pmatrix} n \\ k \end{pmatrix} \equiv \frac{ n!}{k! (n-k)!}
+{{< /katex >}}
+
+- Continuous distributions: \\( X \\) can take on a continuous range of values.
+
+When the random variable can take on a continuum of possible values (e.g. particle velocity), the distribution is a continuous function. Just integrate to get the probability that the value is within a range.
+
+{{< katex display >}}
+P(X = x) = f(x)
+{{< /katex >}}
+
+### Statistical Moments
+
+We can define moments of the probability distribution, which are going to be _very_ important in kinetic theory and in probability theory (and in general).
+
+- 0th moment: "Normalization"
+
+Probability density functions are required to be normalized to 1. In the discrete case, this amounts to
+{{< katex display >}}
+\sum _{i} P(X = x_i) = 1
+{{< /katex >}}
+In the continuous case,
+{{< katex display >}}
+\int _{\Omega} f(x) \dd x = 1
+{{< /katex >}}
+
+- 1st moment: "Expected value" or weighted average.
+
+{{< katex display >}}
+\mathbf{E}[X] \equiv \sum_i x_i p_i
+{{< /katex >}}
+{{< katex display >}}
+\langle X \rangle = \sum_{\Omega} x f(x) \dd x
+{{< /katex >}}
+
+- 2nd moment: "Variance" (square of the standard deviation)
+
+Describes the spread in the outcomes
+
+{{< katex display >}}
+\mathbf{V}(X) = \sum_i x_i ^2 p_i
+{{< /katex >}}
+{{< katex display >}}
+\langle X^2 \rangle = \int x^2 f(x) \dd x
+{{< /katex >}}
+
+- General Nth moment:
+
+{{< katex display >}}
+\langle X^n \rangle = \int x^n f(x) \dd x
+{{< /katex >}}
+
+### Law of Large Numbers
+
+Pretty straightforward, independent measurements of random variables work as you would expect.
+
+> If a random variable is repeatedly sampled \\( n \\) times, then in the limit of \\( n \rightarrow \infty \\), the average value of those samples will converge to the expected value.
+
+### Central  Limit Theorem
+
+Many distributions result from summing independent and identical random variables. In the binomial distribution above, each trial is an independent random variable.
+
+> When a distribution results from summing \\( n \\) independent and identical random variables, in the limit \\( n \rightarrow \infty \\) the distribution will approach a normal distribution.
+
+For the binomial distribution (deMoivre-Laplace theorem),
+
+{{< katex display >}}
+\lim _{n \rightarrow \infty} \begin{pmatrix}n \\ k \end{pmatrix} p^k (1 - p) ^{n - k} \rightarrow \frac{1}{\sqrt{2 \pi n p (1 - p)}} e^{- \frac{1}{2} \frac{(k - np)^2}{2 n p (1- p)}}
+{{< /katex >}}
+
+A normal distribution is a distribution that has the form
+
+{{< katex display >}}
+f(x) = \frac{1}{\sqrt{2 \pi} \sigma} e^{ - \frac{1}{2} \left( \frac{x - \mu}{\sigma} \right)^2}
+{{< /katex >}}
+
+{{< katex display >}}
+\langle X \rangle = \mu \quad \text{(Average value)}
+{{< /katex >}}
+{{< katex display >}}
+\langle X^2 \rangle = \sigma^2 \quad \text{(Standard deviation)}
+{{< /katex >}}
+
+This property of the normal distribution alone would account for it showing up in so many areas of physics, but it has another remarkable property: If we define a quantity called "entropy" as
+{{< katex display >}}
+S = - \int f(x) \ln (f) \dd x
+{{< /katex >}}
+
+that measures the information/complexity of the distribution, then **the normal distribution has the maximum entropy among all distributions with the same mean and variance.**
+
+### Random Walks and Diffusion
+
+If we track the position of a one-dimensional random walker that has an equal chance to move a distance \\( \Delta x = h \\) to the left or right each step, and takes a step each interval \\( \Delta t = \tau \\). Let \\( k \\) be the number of steps to the right.
+
+{{< katex display >}}
+x = (k - (n - k))h = (2k - n)h \equiv m h
+{{< /katex >}}
+{{< katex display >}}
+k = \frac{n + m}{2}
+{{< /katex >}}
+
+The probability that we took \\( k \\) steps to the right after \\( n \\) steps is given by the binomial distribution with \\( p = 1/2 \\)
+
+{{< katex display >}}
+f_n (k) = \begin{pmatrix}n \\ k \end{pmatrix} \frac{1}{2^n}
+{{< /katex >}}
+
+The construction of Pascal's triangle comes from the recursion relation, adding the previous rows
+{{< katex display >}}
+\begin{pmatrix} n \\ k \end{pmatrix} = \begin{pmatrix} n - 1 \\ k \end{pmatrix} + \begin{pmatrix} n - 1\\ k - 1 \end{pmatrix}
+{{< /katex >}}
+\\( n \rightarrow n + 1 \\)
+{{< katex display >}}
+\begin{pmatrix} n+ 1 \\ k \end{pmatrix} = \begin{pmatrix} n \\ k \end{pmatrix} + \begin{pmatrix} n \\ k - 1\end{pmatrix}
+{{< /katex >}}
+\\( k \rightarrow k + 1/2 \\)
+{{< katex display >}}
+\begin{pmatrix} n + 1 \\ k + 1/2 \end{pmatrix} = \begin{pmatrix} n \\ k + 1/2 \end{pmatrix} + \begin{pmatrix} n \\ k- 1/2 \end{pmatrix}
+{{< /katex >}}
+\\( k = \frac{n + m}{2} \\)
+{{< katex display >}}
+\begin{pmatrix} n + 1\\ \frac{n + 1 + m}{2} \end{pmatrix} = \begin{pmatrix} n \\ \frac{n + (m + 1)}{2} \end{pmatrix} + \begin{pmatrix} n \\ \frac{n + (m - 1)}{2} \end{pmatrix}
+{{< /katex >}}
+
+From that, we can conclude that
+{{< katex display >}}
+f_n (k / m) = \begin{pmatrix} n \\ k \end{pmatrix} \frac{1}{2^n} = \begin{pmatrix} n \\ \frac{n + m}{2} \end{pmatrix} \frac{1}{2^n}
+{{< /katex >}}
+{{< katex display >}}
+f_{n+1} (m) = \frac{1}{2} \left( f_n (m+1) + f_n (m-1) \right)
+{{< /katex >}}
+In words, the probability of reaching position \\( x \\) after \\( n \\) steps is the average of the probabilities of reaching position \\( x - h \\) after \\( n-1 \\) steps and reaching position \\( x + h \\) after \\( n - 1 \\) steps.
+
+{{< katex display >}}
+f_{n+1} (m) - f_n (m) = \frac{1}{2} (f_n (m+1) - 2 f_n (m) + f_n (m-1))
+{{< /katex >}}
+
+This has the form of a difference equation (lattice equation). \\( n \\) corresponds to time and \\( m \\) corresponds to position. We know the Euler approximations of the first and second derivatives
+
+{{< katex display >}}
+\pdv{f}{t} \approx \frac{f_{n+1} - f_n}{\tau} \qquad \tau \rightarrow 0
+{{< /katex >}}
+{{< katex display >}}
+\pdv{^2 f}{x^2} \approx \frac{f_{m+1} - 2 f_m + f_{m-1}}{h^2} \quad h \rightarrow 0
+{{< /katex >}}
+
+Writing the difference equation in the same kind of form:
+
+{{< katex display >}}
+\frac{f_{n+1} (m) - f_n (m)}{\tau} = \frac{- h^2}{2 \tau} \left( \frac{f_n(m+1) - 2f_n (m) + f_n (m-1)}{h^2} \right)
+{{< /katex >}}
+
+We have something that really looks like the diffusion equation. But, we need to be careful when we take the limit \\( \tau \rightarrow 0, h \rightarrow 0 \\). In particular, we need to take the limits such that \\( D \equiv \frac{h^2}{2 \tau} \\) is constant. If we do that as we take the limit, we arrive at the partial differential equation
+{{< katex display >}}
+\pdv{f}{t} = D \pdv{^2 f}{x^2}
+{{< /katex >}}
+{{< katex display >}}
+D = \frac{(\Delta x)^2}{2 \Delta t}
+{{< /katex >}}
+
+Random motion produces diffusion!
+
+- If we were to include a non-symmetric term, and say that the random walker has a tendency to move in one direction so that \\( p \neq 1/2 \\), then we would find a drift motion. The resulting system is the Fokker-Planck equation.
+- The Heat equation
+{{< katex display >}}
+\partial _t u = D \partial_{xx} u
+{{< /katex >}}
+has a fundamental solution
+{{< katex display >}}
+u(x, t = 0) = \delta (x)
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow u(x, t) = \frac{1}{\sqrt{2 \pi} \sqrt{2 D t}} e^{- \frac{2^2}{2 (2Dt)}}
+{{< /katex >}}
+The fundamental behavior of the heat equation is that structures spread out as
+{{< katex display >}}
+u \sim \frac{1}{\sqrt{t}}
+{{< /katex >}}
+and do so at a rate \\( D \\).
+
+## Kinetic Theory
+
+**Introduction to phase space mechanics**
+
+Consider 1-dimensional particle motion with position \\( x \\) and velocity \\( v \\)
+
+{{< katex display >}}
+\dot x = v
+{{< /katex >}}
+{{< katex display >}}
+\dot v = F(x) / m
+{{< /katex >}}
+
+If we let the mechanical state of the particle be \\( (x, v) \\), the state can be represented graphically by a point in the \\( x \\)-\\( v \\) plane which we call phase space. Looking at the motion in phase space can make it a lot easier to view the phase of motion.
+
+We can define the flux vector for the motion as
+{{< katex display >}}
+\vec r \equiv (\vec x, \vec v)
+{{< /katex >}}
+{{< katex display >}}
+\dot \vec r = \vec F (\vec r)
+{{< /katex >}}
+analogous to the velocity field in a fluid. The fluid analogy leads tot he concept of phase flow on the streamlines of \\( \vec F(\vec r) \\) in the phase space.
+
+As an example, consider the normalized pendulum
+
+{{< katex display >}}
+\dot x = v
+{{< /katex >}}
+{{< katex display >}}
+\dot v = \sin x
+{{< /katex >}}
+
+We can deduce streamlines by looking at constants of motion
+{{< katex display >}}
+\dv{C}{t} = 0
+{{< /katex >}}
+{{< katex display >}}
+\dv{}{t} C(x, v) = \pdv{C}{x}\dot x + \pdv{C}{v} \dot v = 0
+{{< /katex >}}
+One way to solve this is to pick
+{{< katex display >}}
+\pdv{C}{v} = \dot x
+{{< /katex >}}
+and
+{{< katex display >}}
+\pdv{C}{x} = - \dot v
+{{< /katex >}}
+
+We can solve these independently
+{{< katex display >}}
+\pdv{C}{v} = v \rightarrow C(x, v) = \frac{1}{2} v^2 + f(x)
+{{< /katex >}}
+{{< katex display >}}
+\pdv{C}{x} = - \dot v
+{{< /katex >}}
+When we have a spatially-dependent quantity of this form (force divided by mass), we can identify \\( C \\) as a potential \\( \Phi(x) \\).
+{{< katex display >}}
+C(x, v) = \frac{1}{2} v^2 + \Phi (x) / m + C_0
+{{< /katex >}}
+and write out a Hamiltonian
+{{< katex display >}}
+H = \frac{1}{2} m v^2 + \Phi (x) + H_0
+{{< /katex >}}
+with Hamilton's equations
+{{< katex display >}}
+m \dot x = \pdv{H}{v}
+{{< /katex >}}
+{{< katex display >}}
+\dot v = - \pdv{H}{x} \frac{1}{m}
+{{< /katex >}}
+
+By picking a potential, we can visualize at the phase portrait (streamlines of the phase flux) by looking at surfaces of constant \\( H \\), which is conserved on trajectories. For the pendulum problem
+{{< katex display >}}
+H = \frac{1}{2} \dot \theta ^2 - \frac{g}{l} \cos \theta
+{{< /katex >}}
+
+If we plot these contours, we'll get elliptical sorts of shapes out to a point, then free contours that do not close on themselves. The trapped contours are motions of the pendulum that swing back and forth, while free contours correspond to the pendulum swinging all the way around. The contour that separates free from trapped contours is called the separatrix.
+
+{{< katex display >}}
+H < 0 \rightarrow \text{trapped motion}
+{{< /katex >}}
+{{< katex display >}}
+H = 0 \rightarrow \text{separatrix}
+{{< /katex >}}
+{{< katex display >}}
+H > 0 \rightarrow \text{free motion}
+{{< /katex >}}
+
+Consider an electron in a plasma wave of field
+{{< katex display >}}
+E(x) = A \sin (kx - \omega t)
+{{< /katex >}}
+{{< katex display >}}
+\dot x = v
+{{< /katex >}}
+{{< katex display >}}
+\dot v = - \frac{e}{m} A \sin (kx - \omega t)
+{{< /katex >}}
+
+Looks familiar! We'll see the same pendulum class phase portrait for particles in the simplest kind of plasma wave. The pendulum phase portrait is critical to the idea of wave-particle interaction.
+
+
+
+
+
+
+
+
+
+
+
+
