--- a/content/notes/UWAA556/ch02-1.md
+++ b/content/notes/UWAA556/ch02-1.md
@@ -9,7 +9,7 @@ bookToc: false
 
 {{< /katex >}}
 
-## Plasma Waves in General Dielectric Media
+# Plasma Waves in General Dielectric Media
 
 We're going to start by discussing the transition from the microscopic Maxwell formulation to the macro. To do that we'll need to discuss
 - What polarization is and how electric polarization works
@@ -18,11 +18,11 @@ We're going to start by discussing the transition from the microscopic Maxwell f
 - Discuss the time-dependent and frequency-dependent behavior in relation to the convolution theorem
 - Poynting's theorem and energy conservation
 - Conductivity and resistivity
-- A simple classical model of damped simple harmonic motion
+- A simple classical model of a dielectric displacement as a bound oscillator (damped simple harmonic motion)
 
-### Electric Polarization
+## Electric Polarization
 
-The most basic interaction between the electromagnetic force and matter is electric polarization. If we consider a solid or other form of matter and apply an external electric field, what happens? Zooming in at a microscopic level of the material, we know the material is made of atoms which look like clusters of positive and negative charges that are bound together. In the presence of an external electric field, the positive and negative charges will separate, creating an opposite electric field to balance the externally applied field.
+The simplest interaction between the electromagnetic force and physical matter is electric polarization. If we consider a **solid or other form of matter** and **apply an external electric field**, what happens? Zooming in at a microscopic level of the material, we know the material is made of atoms which are like clusters of positive and negative charges that are bound together. In the presence of an external electric field, the positive and negative charges will separate, creating an opposite electric field to balance the externally applied field.
 
 When the positive and negative charges are displaced by the external electric field, a dipole electric field develops between them. The dipole electric field is the field of an electric dipole (duh). An ideal electric dipole is the limit of the field due to two charges \\( \pm q \\) separated by a distance \\( \vec d \\) as \\( d \rightarrow 0 \\). We define the dipole moment \\( \vec p \\) of an electric dipole as:
 {{< katex display >}}
@@ -33,4 +33,538 @@ In a polarized solid, we define a polarization density
 {{< katex display >}}
 \vec P \equiv \dv{\vec p}{V} \sim \dv{q}{V} \vec \Delta
 {{< /katex >}}
-which is like a charge density \\( \dv{q}{V} \\) times some average separation distance.
+which is like a charge density \\( \dv{q}{V} \\) times some average separation distance. The source of the dipole electric field are **bound** electric charges. The are not free to move/conduct, and remain in place in the presence of an externally applied field.
+
+For the same reason the electric field satisfies Gauss's law
+{{< katex display >}}
+\div \vec E = \rho _c / \epsilon_0
+{{< /katex >}}
+
+and we say that the free charge density \\( \rho_c \\) is the source of the electric field, we also say that the bound charge density \\( \rho_b \\) is the source of the polarization field.
+
+{{< katex display >}}
+\div \vec P = - \rho_b
+{{< /katex >}}
+
+The polarization density has different units than the electric field, so we don't need the \\( \epsilon_0 \\), and we also have a minus sign because the polarization field points opposite the charge displacement.
+
+- **Displacement Field**
+
+We can now define the Displacement Field (the "D" field). We break the total charge density into free charges \\( \rho_f \\) and bound charges \\( \rho_b \\)
+
+{{< katex display >}}
+\rho_c = \rho_f + \rho_b
+{{< /katex >}}
+
+{{< katex display >}}
+\epsilon_0 \div \vec E = \rho_f - \div \vec P
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \div (\epsilon_0 \vec E + \vec P) = \rho_f
+{{< /katex >}}
+
+We define the displacement field \\( \vec D \\) to be
+
+{{< katex display >}}
+\vec D = \epsilon_0 \vec E + \vec P \rightarrow \div \vec D = \rho_f
+{{< /katex >}}
+
+- **Constitutive Relations**
+
+If we have no external electric field applied to some material, there will be zero polarization field, and if we apply an external field we will see some non-zero polarization. A constitutive relation gives the relationship between these two fields.
+
+{{< katex display >}}
+\vec P = \epsilon_0 \chi \vec E
+{{< /katex >}}
+
+We call the constant (or function) of proportionality the **electric susceptibility** \\( \chi \\)
+
+Putting that into our definition of \\( \vec D \\) we get
+
+{{< katex display >}}
+\vec D = \epsilon_0 \vec E + \epsilon_0 \chi \vec E
+{{< /katex >}}
+{{< katex display >}}
+\vec D = \epsilon_0 (1 + \chi) \vec E
+{{< /katex >}}
+
+We call this second constitutive relation the **dielectric constant**/**electric permittivity**
+{{< katex display >}}
+\epsilon \equiv \epsilon_0( 1 + \chi)
+{{< /katex >}}
+
+Generally speaking the constitutive relations are tensor relations that can have off-axis components
+
+{{< katex display >}}
+\vec P = \epsilon_0 \overline \chi \vec E \qquad \vec E = \overline \epsilon \vec E
+{{< /katex >}}
+
+and call them the susceptibility tensor and dielectric tensor. But if the material is isotropic, we just have scalar constitutive factors.
+
+In vacuum, we know that the susceptibility is zero \\( \chi_{vac} = 0 \\) and the permittivity is the permittivity of free space.
+
+If \\( \chi \neq 0 \\), that implies that some kind of polarization is taking place.
+
+
+## Time-Dependent Polarization
+
+How does polarization come about, and how does the polarization change over time as we change an externally applied electric field?
+
+If we turn on the external field very slowly, the polarization should just match the external field \\( \vec P = \chi \vec E \\) because the bound charges will have time to separate. But, if we turn on the electric field very quickly, faster than the charges are able to respond, then \\( \vec P \neq \chi \vec E \\) because the inertia of the bound charges causes a time delay between \\( \vec P \\) and \\( \vec E \\).
+
+We describe the time delay mathematically as a convolution (time-delay integral) of \\( \chi \\) and \\( \vec E \\)
+
+{{< katex display >}}
+\vec P (t) = \int _{-\infty} ^\infty \epsilon_0 \chi(t - t') \vec E(t') \dd t'
+{{< /katex >}}
+
+We can apply a causality constraint to say that the susceptibility should not depend on anything that happens in the future
+{{< katex display >}}
+\chi (t - t') = 0 \quad \text{if} \quad t > t'
+{{< /katex >}}
+This kind of causality constraint leads to the Kramers-Kronig relations, related to the subject of Hilbert transform theory.
+
+Carrying this convolution integral around is going to make things pretty cumbersome, but we can simplify the picture by working with spectral variables. The convolution theorem helps out a lot here
+
+
+{{< hint info >}}
+**Fourier Convolution Theorem:**
+
+Let \\( f(x) \\), \\( g(x) \\) be functions with Fourier transforms \\( \hat f(k) \\), \\( \hat g (k) \\). Then
+
+- The product \\( h(x) = f(x) g(x) \\) has the Fourier transform \\( \hat h (k) = \int _{- \infty} ^\infty \hat f(k - k') \hat g(k') \dd k' \\)
+
+- The product of the spectral transforms \\( \hat m(k) = \hat f(k) \hat g(k) \\) has inverse Fourier transform \\( m(x) = \int _{-\infty} ^\infty f(x - x') g(x') \dd x' \\)
+
+We can summarize by saying that products and convolution are Fourier transform pairs.
+{{< /hint >}}
+
+
+So, in the spectral variables \\( \hat \vec P(\omega) \\) and \\( \hat \vec E (\omega) \\), the convolution is much simpler:
+
+{{< katex display >}}
+\vec P (t) = \epsilon_0 \int _{-\infty} ^\infty \chi (t - t') \vec E(t') \dd t'
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \hat \vec P (\omega) = \epsilon_0 \hat \chi (\omega) \hat \vec E(\omega)
+{{< /katex >}}
+
+Similarly, the dielectric function is
+
+{{< katex display >}}
+\hat \epsilon(\omega) = \epsilon_0 (1 + \hat \chi (\omega))
+{{< /katex >}}
+
+So we can construct the polarization field as a function of frequency if we know the susceptibility.
+
+If the spectral susceptibility \\( \hat \chi(\omega) \\) is completely real, that means \\( \hat p = \hat \chi \hat E \\), meaning \\( \vec P \\) and \\( \vec E \\) have the same phase. But, if the susceptibility is complex, we'll also get a phase shift. \\( \hat P \\) is amplitude modulated and phase shifted.
+
+Time-varying polarization is a function of moving charges, which means that time-varying polarization is associated with an electric current
+{{< katex display >}}
+\pdv{\vec P}{t} \sim \vec j _{p}
+{{< /katex >}}
+
+which leads us into...
+
+## Magnetization
+
+Magnetization is the magnetic counterpart to polarization. In the same way that in the presence of an electric field a material might have some polarization density of electric dipoles, a material can have a magnetization density of magnetic dipoles. Unlike electric polarization, there are materials that are intrinsically magnetic which have microscopic **bound currents** that sustain the field. But in the same way, a material subjected to an external magnetic field becomes magnetized in response due to the development of **magnetic moments** within it.
+
+To review (see Griffiths) magnetic dipoles are defined as the magnetic field due to a current \\( I \\) flowing inside a loop of area \\( \vec s \\)
+
+{{< katex display >}}
+\vec m = I \vec s
+{{< /katex >}}
+
+The density of magnetic dipole moments is called magnetization
+{{< katex display >}}
+\vec M \equiv \dv{\vec m}{V}
+{{< /katex >}}
+
+### Magnetization Current
+
+We picture our magnetized material as a bunch of tiny current loops. If all of the current loops are uniform, then there is no net current density because each loop cancels its neighbors, even though there is a non-zero magnetization.
+
+If there is an inhomogeneity in our system of current loops, there will be a net current across the material. The current from inhomogeneity in the system is described by the curl. The **magnetization current density** \\( \vec j_m \\) is given by:
+
+{{< katex display >}}
+\vec j _m = \curl \vec M
+{{< /katex >}}
+
+### Magnetic H Field
+
+Just as we did for polarizations, we can split the current density into a sum of free and bound currents
+
+{{< katex display >}}
+\vec j = \vec j _f + \vec j_m
+{{< /katex >}}
+
+Substituting into Ampere's law,
+{{< katex display >}}
+\curl \vec B = \mu_0 \vec j = \mu_0 \vec j_f + \mu_0 \vec j_m
+{{< /katex >}}
+{{< katex display >}}
+= \mu_0 \vec j _f + \mu_0 \curl \vec M
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \curl (\vec B - \mu_0 \vec M) = \mu_0 \vec j _f
+{{< /katex >}}
+
+If we define the H field as
+{{< katex display >}}
+\mu_0 \vec H \equiv \vec B - \mu_0 \vec M
+{{< /katex >}}
+then we get the nice expression for \\( \vec H \\) which encapsulates the magnetization, just as we had for the \\( \vec D \\) field.
+{{< katex display >}}
+\curl \vec H = \vec j _f
+{{< /katex >}}
+{{< katex display >}}
+\div \vec D = \rho_f
+{{< /katex >}}
+
+We also want some constitutive relations for the \\( \vec H \\) field, starting with a magnetic susceptibility \\( \chi_m \\) and magnetic permeability \\( \mu \\).
+
+{{< katex display >}}
+\vec M  = \chi _m \vec H \qquad \vec B = \mu \vec H
+{{< /katex >}}
+
+Combining, the magnetic permeability is related to the susceptibility by
+{{< katex display >}}
+\mu = \mu_0 (1 + \chi_m)
+{{< /katex >}}
+
+To summarize, going from the micro to the macro picture:
+
+| Micro | Macro |
+| - | - |
+| \\( \div \vec E = \frac{\rho_c}{\epsilon_0} \\) | \\( \div \vec D = \rho_f  \\) |
+| \\( \curl \vec E = - \pdv{\vec B}{t} \\) | \\( \curl \vec E = - \pdv{\vec B}{t} \\) |
+| \\( \div \vec B = 0 \\) | \\( \div \vec B = 0  \\) |
+|\\( \curl \vec B = \mu_0 \vec j + \frac{1}{c^2} \pdv{\vec E}{t} \\) | \\( \curl \vec H = \vec j _f + \pdv{\vec D}{t} \\) |
+
+The two systems are related by
+{{< katex display >}}
+\rho_c = \rho_b + \rho_f
+{{< /katex >}}
+{{< katex display >}}
+\vec j = \vec j _m + \vec j _f
+{{< /katex >}}
+and the constitutive relations, which are material properties of the medium.
+{{< katex display >}}
+\vec D = \epsilon \vec E \qquad \epsilon = \epsilon_0 (1 + \chi)
+{{< /katex >}}
+{{< katex display >}}
+\vec B = \mu \vec H \qquad \mu = \mu_0 (1 + \chi _m)
+{{< /katex >}}
+
+### Poynting's Theorem
+
+Poynting's theorem is the conservation law for electromagnetic energy. If we define a vector \\( \vec S \\) to be
+{{< katex display >}}
+\vec S = \vec E \cross \vec H
+{{< /katex >}}
+and take its divergence,
+{{< katex display >}}
+\div \vec S = \div (\vec E \cross \vec H) \\
+= \vec H \cdot (\curl \vec E) - \vec E \cdot (\curl \vec H) \\
+= - \vec H \cdot \pdv{\vec B}{t} - \vec E \cdot \vec j_f - \vec E \cdot \pdv{\vec D}{t}
+{{< /katex >}}
+
+If the material properties remain constant, then the susceptibilities will not be functions of time
+{{< katex display >}}
+\epsilon \neq \epsilon(t) \quad \mu \neq \mu(t)
+{{< /katex >}}
+and we can combine the quadratic terms
+{{< katex display >}}
+- \vec H \pdv{\vec B}{t} = - \pdv{}{t} \left( \frac{1}{2} \vec B \cdot \vec H \right)
+{{< /katex >}}
+{{< katex display >}}
+\pdv{}{t} \left( \frac{1}{2} \vec E \cdot \vec D + \frac{1}{2} \vec B \cdot \vec H \right) = - \div \vec S - \vec E \cdot \vec j_f
+{{< /katex >}}
+
+Defining electromagnetic energy density as \\( u = \frac{1}{2} \vec E \cdot \vec D + \frac{1}{2} \vec B \cdot \vec H \\), then we get Poynting's theorem in conservation form
+
+{{< katex display >}}
+\pdv{u}{t} + \div \vec S = - \vec E \cdot \vec j_f
+{{< /katex >}}
+
+This says that the source term for electromagnetic energy is \\( \vec E \cdot \vec j_f \\). If we integrate over a volume \\( V \\),
+
+{{< katex display >}}
+U = \int u \dd V
+{{< /katex >}}
+{{< katex display >}}
+\dv{U}{t} = - \oint \vec S \cdot \dd \vec A - \int \vec E \cdot \vec j_f \dd V
+{{< /katex >}}
+So, the change in EM energy within the volume is the sum of the Poynting flux through the surface and the rate of work done by the electromagnetic field on charges within the volume.
+
+## Electromagnetic Work and Resistivity
+
+The electromagnetic force on any charged particle is given by the Lorentz force law
+{{< katex display >}}
+\vec F = q (\vec E + \vec v \cross \vec B)
+{{< /katex >}}
+
+The rate of work done on the charged particle is the product of force into velocity
+{{< katex display >}}
+\dv{W}{t} = \vec F \cdot \vec v = q \vec E \cdot \vec v
+{{< /katex >}}
+
+Put a bunch of moving charges together, perhaps of various species "s", then we have a charge density \\( \vec j _s = n_s q_s \vec v_s \\). The rate of work density on the ensemble is
+{{< katex display >}}
+\dv{w_s}{t} = \vec E \cdot \vec j_s
+{{< /katex >}}
+
+That's the source we have in the Poynting theorem. \\( \vec E \cdot \vec j \\) mediates energy transfer between charged particles and electromagnetic fields.
+
+### Resistivity and Conductivity
+
+We write out another constitutive relation between the electric field and current, introducing the conductivity \\( \sigma \\)
+
+{{< katex display >}}
+\vec j = \sigma \vec E
+{{< /katex >}}
+
+Again, conductivity is in general a tensor, and is only scalar for isomorphic materials.
+
+We call the inverse of the conductivity resistivity \\( \eta \\)
+
+{{< katex display >}}
+\vec E = \eta \vec j \rightarrow \eta = \sigma ^{-1}
+{{< /katex >}}
+
+In the scalar case, the energy transfer is
+{{< katex display >}}
+\dv{w_s}{t} = \vec E \cdot \vec j_s = \sigma _s j^2 = \sigma_s E^2
+{{< /katex >}}
+The change in energy stored in the electromagnetic fields is the opposite
+{{< katex display >}}
+\dv{u}{t} = - \sigma_s j^2 = - \sigma_s E^2
+{{< /katex >}}
+
+Conduction is a one-way transfer of energy from electromagnetic fields to particles.
+
+### Time-Dependent Conduction
+
+The electric current that results from conduction due to a rapidly changing electric field is a convolution with the field in time
+{{< katex display >}}
+\vec j (t) = \int _{- \infty} ^{\infty} \sigma(t - t') \vec E(t') \dd t'
+{{< /katex >}}
+In the frequency domain, we just have
+{{< katex display >}}
+\hat \vec j (\omega) = \hat \sigma (\omega) \hat \vec E(\omega)
+{{< /katex >}}
+
+Moving to the frequency domain gives us the temporal response to the changing field, but how do we include the spatial dependence? \\( \hat \vec P(\omega) \\), \\( \hat \vec j (\omega) \\) are missing dependence on the wavenumber \\( \vec k \\), but if the material is dispersive we will have relations between the wavenumber and frequency, so we need to include the wavenumber.
+
+- First, we have a **cause** of a spatio-temporal change, in our case a changing electromagnetic field (force)
+- We have a **medium** of response, described by the susceptibility of the material
+- Then we get a **response**, \\( \vec P \\), \\( \vec M \\), \\( \vec j \\), etc.
+
+In general the susceptibility of the system is going to be dependent on both a time delay and a spatial delay. Especially if the medium itself is moving, we will see a non-local response due to what happened at a previous time at a different location, because the coordinate that's responding to the cause has moved from its initial position.
+
+{{< katex display >}}
+\vec P (\vec x, t) = \int _{-\infty} ^{\infty} \dd t \int _{-\infty} ^{\infty}  \dd \vec x \chi (\vec x - \vec x', t - t') \vec E(\vec x', t')
+{{< /katex >}}
+
+This sounds pretty nasty, but we can apply the convolution theorem several times to get:
+{{< katex display >}}
+\hat \vec P(\vec k, \omega) = \hat \chi(\vec k, \omega) \vec E(\vec k, \omega)
+{{< /katex >}}
+
+So, if the susceptibility is a function of both space and time \\( \hat \chi(\vec k, \omega) \\), then we know that there is nonlocality in the response. This is the case in plasmas, because the particles are moving around.
+
+{{< katex display >}}
+\hat \vec j (\vec k, \omega) = \hat \sigma(\vec k, \omega) \hat \vec E(\vec k, \omega)
+{{< /katex >}}
+{{< katex display >}}
+\hat \vec D(\vec k, \omega) = \hat \epsilon(\vec k, \omega)\vec E(\vec k, \omega)
+{{< /katex >}}
+
+### Alternative Form of Dielectric Constant
+
+Some other texts (like Swanson) use a different version of the dielectric constant, which is more convenient in some situations and is generally used interchangeably in literature.
+
+We described a D field that acts as an electric field due to the bound charge density \\( \div \vec D = \rho_f \\), \\( \vec D = \epsilon_b \vec E \\). We could instead choose a definition of the D field that is divergence free
+{{< katex display >}}
+\div \vec D' = 0 \quad \vec D' = \epsilon ' \vec E
+{{< /katex >}}
+
+How can we construct such a field D? It's always going to be easier in the spectral variables
+{{< katex display >}}
+\vec D(x, t) = \int \int \epsilon_b (\vec x - \vec x', t - t') \vec E(\vec x', t') \dd \vec x' \dd t'
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \hat \vec D = \hat \epsilon_b \hat \vec E
+{{< /katex >}}
+We start by taking the divergence of the curl of \\( \vec H \\) 
+{{< katex display >}}
+\curl \vec H = \vec j_f + \pdv{\vec D}{t}
+{{< /katex >}}
+{{< katex display >}}
+\div ( \quad ) \rightarrow \div \vec j_f + \pdv{}{t} (\div \vec D) = 0
+{{< /katex >}}
+Fourier transforming,
+{{< katex display >}}
+i \vec k \cdot \hat \vec j _f - i \omega (i \vec k \cdot \hat \vec D) = 0
+{{< /katex >}}
+
+Assuming a conductivity given by \\( \hat \vec j_f = \hat \sigma \hat \vec E \\) and substituting in
+{{< katex display >}}
+i \vec k \cdot ( \hat \sigma \hat \vec E - i \omega \hat \epsilon_b \hat \vec E) = 0
+{{< /katex >}}
+{{< katex display >}}
+i \vec k \cdot (\hat \sigma - i \omega \hat \epsilon_b ) \hat \vec E = 0
+{{< /katex >}}
+{{< katex display >}}
+- i \omega(i \vec k \cdot(\hat \epsilon_b - \frac{\hat \sigma}{i \omega}) \hat \vec E) = 0
+{{< /katex >}}
+
+If we define our new \\( \hat \vec D' \\) as
+{{< katex display >}}
+\hat \vec D' = \left( \hat \epsilon_b - \frac{\hat \sigma}{i \omega} \right) \hat \vec E
+{{< /katex >}}
+then
+{{< katex display >}}
+- i \omega(i \vec k \cdot \hat \vec D') = 0 \rightarrow \div \vec D' = 0
+{{< /katex >}}
+
+So, when we move from a field \\( \vec D \\) which is not divergence-free to \\( \vec D' \\), we get a different dielectric constant
+{{< katex display >}}
+\vec D = \hat \epsilon_b \hat \vec E \quad \rightarrow \quad \hat \vec D' = \hat \epsilon \hat \vec E
+{{< /katex >}}
+{{< katex display >}}
+\hat \epsilon = \hat \epsilon_b + i \frac{\hat \sigma}{\omega}
+{{< /katex >}}
+This is sometimes called the **effective dielectric constant**.
+
+Looking back at what we've actually done when transforming to this new \\( \vec D' \\) view,
+- \\( \div \vec D = 0 \\) is the basic assumption. This is essentially the same as transforming into a system in which there are no free charges.
+- If the polarization is happening such that the imaginary part of \\( \hat \epsilon_b \\) is zero, that implies that \\( \text{Im}(\hat \epsilon) = \hat \sigma / \omega \\)
+
+### Polarization of Simple Oscillator
+
+> This is based on some notes by C.S Baird and others + a lot of wikipedia. There's a lot of good information available online, but it can be hard to understand. The hope of this class is that by the end you'll have enough background to understand the internet better :)
+
+We're going to encounter the dielectric function \\( \epsilon(\omega, \vec k) \\) over and over in this class as we discuss plasma waves. We will see some patterns in the dielectric function over and over. A good tool for understanding these patterns is to consider a simple classical model: the polarization of an "electric slab."
+
+Imagine we have a slab of bound negative charges of density \\( n_e \\) within a neutral background. When the slab responds to an external electric field \\( \vec E_x \\) and moves by \\( \vec x \\), it leaves behind (or reveals) positive charge. This displacement creates an electric field, same as a capacitor
+{{< katex display >}}
+\vec E_r = \frac{Q}{\epsilon_0 A} \hat x
+{{< /katex >}}
+{{< katex display >}}
+\vec E_r = - \frac{qn}{\epsilon_0} \vec x
+{{< /katex >}}
+The total force on the slab of negative charges is the sum of the two fields
+{{< katex display >}}
+\vec F = q \vec E_r + q \vec E_x = - \frac{q^2 n}{\epsilon_0} \vec x + q \vec E_x
+{{< /katex >}}
+This looks like a classical oscillator, with spring constant \\( \kappa = \frac{q^2 n}{\epsilon_0} \\). The equation of motion is then
+{{< katex display >}}
+m_e \pdv{^2 x}{t^2} = - \frac{q^2 n}{\epsilon_0} \vec x + q \vec E_x
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \dv{^2 x}{t^2} = - \omega_p ^2 \vec x + \frac{q}{m} \vec E_x
+{{< /katex >}}
+Where the square of the natural frequency of the system is what we call the **plasma frequency**
+{{< katex display >}}
+\omega_p ^2 = \frac{q^2 n}{\epsilon_0 m}
+{{< /katex >}}
+If we also assume that there is some dissipation in the system, we'll have a damping term proportional to the velocity
+{{< katex display >}}
+\dv{^2 \vec x}{t} + \gamma \dv{\vec x}{t} + \omega_p ^2 \vec x = \frac{q}{m} \vec E_x
+{{< /katex >}}
+This is the general first-order equation for driven simple harmonic motion with damping \\( \gamma \\). Now, we move to the frequency domain
+{{< katex display >}}
+(- i \omega)^2 \hat \vec x + (- i \omega \gamma) \hat \vec x + \omega_p ^2 \hat \vec x = \frac{q}{m} \hat \vec E_x
+{{< /katex >}}
+Solving for the displacement,
+{{< katex display >}}
+\rightarrow \hat \vec x(\omega_p ^2 - \omega^2 - i \omega \gamma) = \frac{q}{m} \hat \vec E_x
+{{< /katex >}}
+{{< katex display >}}
+\hat \vec x = \frac{q}{m} \frac{1}{\omega_p ^2 - \omega^2 - i \omega \gamma} \hat \vec E_x
+{{< /katex >}}
+Let's try and relate this to the polarization in our system resulting from \\( \vec E_x \\). The polarization of our slab is given by the density of dipole moments
+{{< katex display >}}
+\vec p = q \vec x \qquad \vec P = n q \vec x
+{{< /katex >}}
+{{< katex display >}}
+\hat \vec P = n q \hat \vec x
+{{< /katex >}}
+The constitutive relation for the electric susceptibility is defined by
+{{< katex display >}}
+\hat \vec P = \epsilon_0 \hat \chi \hat \vec E
+{{< /katex >}}
+so we can pick out the susceptibility from our forcing function
+{{< katex display >}}
+\hat \vec P = \frac{n q^2}{\epsilon_0 m} \frac{1}{\omega_p ^2 - \omega ^2 - i \omega \gamma} \hat \vec E
+{{< /katex >}}
+{{< katex display >}}
+\hat \chi = \frac{\omega_p ^2}{\omega_p ^2 - \omega ^2 - i \omega \gamma}
+{{< /katex >}}
+This is the susceptibility of the model in which we have a slab of polarizing bound charge with damping \\( \gamma \\). The permittivity we get is just
+{{< katex display >}}
+\hat \epsilon = (1 + \hat \chi) \epsilon_0 \qquad \frac{\hat \epsilon}{\epsilon_0} = 1 + \hat \chi
+{{< /katex >}}
+We can consider a few potential situations.
+- What if \\( \gamma = 0\\)
+{{< katex display >}}
+\frac{\epsilon}{\epsilon_0} = 1 + \frac{\omega_p ^2}{\omega_p ^2 - \omega ^2}
+{{< /katex >}}
+This is the kind of motion we'll see with magnetic cyclotron motion.
+- What if we have "free" oscillators, such that \\( \ddot x = \frac{q}{m} E_x \\)
+{{< katex display >}}
+\frac{\epsilon}{\epsilon_0} = 1 - \frac{\omega_p ^2}{\omega^2}
+{{< /katex >}}
+{{< katex display >}}
+\hat \chi = - \frac{\omega_p ^2}{\omega^2} \quad \rightarrow \quad \hat \vec P = - \frac{\omega_p ^2}{\omega ^2} \epsilon _0 \hat \vec E
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \pdv{^2 \vec P}{t^2} = \omega_p ^2 \epsilon_0 \vec E_x
+{{< /katex >}}
+This means that free charges will oscillate at the plasma frequency.
+
+### Towards Classical Resistivity
+
+- The bound, oscillating slab with zero dissipation had susceptibility that looks like
+{{< katex display >}}
+\chi_b = \frac{\omega_p ^2}{\omega_p ^2 - \omega ^2}
+{{< /katex >}}
+- The free oscillator with no dissipation looks like
+{{< katex display >}}
+\chi_f = - \frac{\omega_p ^2}{\omega ^2}
+{{< /katex >}}
+- A free oscillator with dissipation has the form
+{{< katex display >}}
+\chi _{fd} = - \frac{\omega_p ^2}{\omega^2 + i \omega \gamma}
+{{< /katex >}}
+As a trial susceptibility, for independent systems the susceptibilities just sum together.
+{{< katex display >}}
+\chi = \chi_b + \chi _{fd}
+{{< /katex >}}
+{{< katex display >}}
+\chi = \frac{\omega_p ^2}{\omega_p ^2 - \omega ^2} - \frac{\omega_p ^2}{\omega^2 + i \omega \gamma}
+{{< /katex >}}
+{{< katex display >}}
+\frac{\epsilon}{\epsilon_0} = 1 + \frac{\omega_p ^2}{\omega_p ^2 - \omega^2} - \frac{\omega_p ^2}{\omega^2 + i \omega \gamma} 
+{{< /katex >}}
+{{< katex display >}}
+\frac{\epsilon}{\epsilon_0} = 1 + \frac{\omega_p ^2}{\omega_p ^2 - \omega^2} + i \frac{\omega_p ^2}{\omega(\gamma - i \omega)}
+{{< /katex >}}
+Comparing to the effective dielectric constant, we can identify the bound and free portions of the dielectric constant
+{{< katex display >}}
+\hat \epsilon = \hat \epsilon_b + i \frac{\hat \sigma}{\omega \epsilon_0}
+{{< /katex >}}
+{{< katex display >}}
+\hat \epsilon_b = 1 + \frac{\omega_p ^2}{\omega_p ^2 - \omega^2}
+{{< /katex >}}
+The first part is the bound permittivity, and the second part is something like \\( i / \omega \\) times a conductivity:
+{{< katex display >}}
+\hat \sigma = \frac{\omega_p ^2 \epsilon_0}{\gamma - i \omega}
+{{< /katex >}}
+This is actually the frequency-dependent Spitzer conductivity, which we will derive another way later on but we can already get to it just from the slab model.
+{{< katex display >}}
+\eta = \frac{\nu _{ei}}{\epsilon_0 \omega_p ^2}
+{{< /katex >}}
+where the electron-ion collision frequency \\( \nu_{ei} \\) is related to the dissipation \\( \gamma \\).
