Start on refraction + linearization

--- a/content/notes/UWAA556/ch02-1.md
+++ b/content/notes/UWAA556/ch02-1.md
@@ -79,7 +79,7 @@ If we have no external electric field applied to some material, there will be ze
 
 We call the constant (or function) of proportionality the **electric susceptibility** \\( \chi \\)
 
-Putting that into our definition of \\( \vec D \\) we get
+Note that the susceptibility is unit-less. Putting that into our definition of \\( \vec D \\) we get
 
 {{< katex display >}}
 \vec D = \epsilon_0 \vec E + \epsilon_0 \chi \vec E
@@ -565,6 +565,12 @@ The first part is the bound permittivity, and the second part is something like 
 {{< /katex >}}
 This is actually the frequency-dependent Spitzer conductivity, which we will derive another way later on but we can already get to it just from the slab model.
 {{< katex display >}}
-\eta = \frac{\nu _{ei}}{\epsilon_0 \omega_p ^2}
+\eta_{spitzer} = \frac{\nu _{ei}}{\epsilon_0 \omega_p ^2}
 {{< /katex >}}
 where the electron-ion collision frequency \\( \nu_{ei} \\) is related to the dissipation \\( \gamma \\).
+
+Let's take a quick second to look at the anatomy of the susceptibility we've got. In the numerator we've got \\( \omega_p ^2 \\), which came from the polarization \\( \vec P = n q \vec \Delta \\) with a displacement like \\( \vec \Delta \sim q / m \\).
+
+In the denominator, if there's a plasma frequency \\( \omega_p ^2 \\), that's due to a bound oscillation. There's a \\( \omega ^2 \\) term that gives the frequency response of an oscillator.
+
+
